--- a/www/index.html
+++ b/www/index.html
@@ -9,6 +9,6 @@
 		<h1>Hello World!</h1>
 		<p id="dp"></p>
 		<input type="button" onclick="deviceInfo()" value="Let me introduce myself!">
-		<input type="button" onclick="dane()" value="Wyswietl dane">
+		<input type="button" onclick="wyswietlDane()" value="Wyswietl dane">
 	</body>
 </html>
